# CargoDash_preview

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ch.md  plan.md  pyproject.toml
cargodash/: __init__.py
cargodash/core/: module.py  pipeline.py
cargodash/data_utils/: batch.py  queue.py  schema.py
cargodash/models/: client.py
recipes/verified-math-reasoning/: .gitignore  LICENSE-DATA.txt  NOTICE.md  README.md  _demo_seeds.jsonl  _numina_1k.jsonl  decontam.py  load_numina.py  pipeline.py  test_verifier.py  verifier.py
skills/cargodash-fill-pipeline/: SKILL.md
skills/cargodash-from-scratch/: SKILL.md
skills/cargodash-reference/: SKILL.md
tests/: test_executor.py  test_pipeline.py  test_recipe_smoke.py  test_retry.py
webui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
webui/scripts/: smoke_codegen.ts  smoke_migration.ts  smoke_multi_source.ts
webui/src/: App.js  App.tsx
webui/src/canvas/: Canvas.js  Canvas.tsx  DeletableEdge.js  DeletableEdge.tsx
webui/src/codegen/: generate.js  generate.ts
webui/src/nodes/: DataOutputNode.tsx  JudgeNode.tsx  LLMCallNode.tsx  NodeShell.tsx  ProcessorNode.js  ProcessorNode.tsx  RawDataSourceNode.tsx  VoteNode.tsx  defaults.js  defaults.ts  index.js  index.ts
webui/src/panels/: CodeField.tsx  NodePalette.js  NodePalette.tsx  PropertiesPanel.js  PropertiesPanel.tsx  SchemaEditor.tsx  fields.tsx
webui/src/store/: graphStore.js  graphStore.ts
webui/src/types/: graph.ts
